Revision history for Mojolicious-Plugin-Ubic

0.01
       * Add /services resource