@@ -18,8 +18,7 @@ my $t = Test::Mojo->new;
 
 {
   remove_tree 't/ubic';
-  $t->get_ok('/dummy/services')->json_is('/services', {})->json_is('/foo', 'bar');
-  $t->get_ok('/dummy/services/foo')->status_is(404)->json_is('/error', 'Not found');
+  $t->get_ok('/dummy/service/foo/status')->status_is(404)->json_is('/error', 'Not found');
 }
 
 {
@@ -28,10 +27,10 @@ my $t = Test::Mojo->new;
   print $SERVICE "use parent 'Ubic::Service'; sub status { 'running' } bless {}\n";
   close $SERVICE;
 
-  $t->get_ok('/dummy/services')
-    ->json_is('/services/foo/services/test123/status', 'running')
-    ->json_is('/foo', 'bar')
-    ;
+  $t->get_ok('/dummy/service/foo.test123/yikes')->status_is(400)->json_is('/error', 'Invalid command');
+  $t->get_ok('/dummy/service/foo.test123')->json_is('/status', 'running');
+  $t->get_ok('/dummy/service/foo.test123/status')->json_is('/status', 'running');
+  #diag $t->tx->res->body;
 }
 
 done_testing;
